--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.8.1
 certifi==2024.2.2
 charset-normalizer==3.3.2
+coverage==3.6
 Django==5.0.6
 django-cors-headers==4.3.1
 django-filter==24.2
